--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "devDependencies": {
     "@types/chai": "^4.2.10",
     "@types/mocha": "^7.0.2",
+    "@types/sinon": "^7.5.2",
+    "@types/sinon-chai": "^3.2.3",
     "chai": "^4.2.0",
     "mocha": "^7.1.0",
+    "sinon": "^9.0.0",
+    "sinon-chai": "^3.5.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
   }
